# substrate_club_manager

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/club-manager/: Cargo.toml  README.md
pallets/club-manager/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
